[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "logger-msh"
version = "0.1.0"
description = "Custom logger library using Loguru"
authors = [{ name = "Moshe" }]
readme = "README.md"
requires-python = ">=3.9"
dependencies = ["loguru>=0.7"]

[tool.setuptools.packages.find]
where = ["src"]